adding csc styling

--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello Site</title>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
 
     <h2>Hello World!</h2>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, sunt perferendis ad dolorem unde,
+         officiis necessitatibus soluta, quia quibusdam earum consectetur!</p>
     
 </body>
 </html>
