--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 
     <h2>Hello World!</h2>
+    <img src="images/Elon Musk.jpg" alt="elon musk photo"/>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, sunt perferendis ad dolorem unde,
          officiis necessitatibus soluta, quia quibusdam earum consectetur!</p>
